[gd_scene load_steps=9 format=3 uid="uid://dngtxgbstgdhj"]

[ext_resource type="Theme" uid="uid://cyxj0ph4ym6nb" path="res://themes/menu-theme.tres" id="1_ino5w"]
[ext_resource type="Script" uid="uid://bcki4q3iouyt8" path="res://scripts/menus/pause.gd" id="2_b5jck"]
[ext_resource type="Shader" uid="uid://ce52nrq7oove7" path="res://shaders/pause.gdshader" id="2_wxdxv"]
[ext_resource type="FontFile" uid="uid://bev8tpdhe7pp" path="res://assets/fonts/silkscreen/slkscrb.ttf" id="3_b5jck"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vibko"]
shader = ExtResource("2_wxdxv")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_vibko"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.096]
}

[sub_resource type="Animation" id="Animation_5sydj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yyyho"]
_data = {
&"RESET": SubResource("Animation_5sydj"),
&"blur": SubResource("Animation_vibko")
}

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = 37.0
offset_right = -80.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ino5w")
script = ExtResource("2_b5jck")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_vibko")
layout_mode = 0
offset_left = -75.0
offset_top = -36.0
offset_right = 312.0
offset_bottom = 181.0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 231.0
offset_bottom = 144.0

[node name="MainButtons" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="PanelContainer/MainButtons"]
layout_mode = 2
text = "Resume"

[node name="Restart Loop" type="Button" parent="PanelContainer/MainButtons"]
layout_mode = 2
text = "Restart Loop"

[node name="Settings" type="Button" parent="PanelContainer/MainButtons"]
layout_mode = 2
text = "Settings"

[node name="Quit" type="Button" parent="PanelContainer/MainButtons"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" type="VBoxContainer" parent="PanelContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 8

[node name="Back" type="Button" parent="PanelContainer/SettingsMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_b5jck")
theme_override_font_sizes/font_size = 18
text = "BACK
"
flat = true

[node name="MainVolSlider" type="HSlider" parent="PanelContainer/SettingsMenu"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="PanelContainer/SettingsMenu/MainVolSlider"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 0
offset_top = -4.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("3_b5jck")
theme_override_font_sizes/font_size = 8
text = "Main Volume"
horizontal_alignment = 1

[node name="MusicVolSlider" type="HSlider" parent="PanelContainer/SettingsMenu"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="PanelContainer/SettingsMenu/MusicVolSlider"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 0
offset_top = -4.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("3_b5jck")
theme_override_font_sizes/font_size = 8
text = "Music Volume"
horizontal_alignment = 1

[node name="SfxVolSlider" type="HSlider" parent="PanelContainer/SettingsMenu"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
max_value = 1.0
step = 0.001
value = 1.0

[node name="Label" type="Label" parent="PanelContainer/SettingsMenu/SfxVolSlider"]
custom_minimum_size = Vector2(64, 16)
layout_mode = 0
offset_top = -4.0
offset_right = 100.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("3_b5jck")
theme_override_font_sizes/font_size = 8
text = "SFX Volume"
horizontal_alignment = 1

[node name="Blur" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yyyho")
}

[connection signal="pressed" from="PanelContainer/MainButtons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/MainButtons/Restart Loop" to="." method="_on_restart_loop_pressed"]
[connection signal="pressed" from="PanelContainer/MainButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PanelContainer/MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="PanelContainer/SettingsMenu/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="PanelContainer/SettingsMenu/MainVolSlider" to="." method="_on_main_vol_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/SettingsMenu/MusicVolSlider" to="." method="_on_music_vol_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/SettingsMenu/SfxVolSlider" to="." method="_on_sfx_vol_slider_value_changed"]
